# open_vio

./: CMakeLists.txt  README.md
camera_models/: CMakeLists.txt
camera_models/include/camodocal/: lexical_cast.h
camera_models/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h
camera_models/include/camodocal/sparse_graph/: Transform.h
camera_models/src/camera_models/: Camera.cc  CameraFactory.cc  EquidistantCamera.cc
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_imu_config.yaml
test/: run_euroc.cpp  test.cpp
vio/: CMakeLists.txt
vio/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vio/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vio/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vio/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  solve_5pts.cpp  solve_5pts.h
vio/src/utility/: EurocDataset.h  Print.cpp  utility.h
